crates/data_components/tests/snapshots/integration__http_provider_test__http_glob_character_class_explain.snap
---
source: crates/data_components/tests/http_provider_test.rs
description: HTTP provider - glob pattern with character class
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: api.content                                                                                                                             |
|               |   Filter: api.request_path = Utf8("/api/v1/users")                                                                                                  |
|               |     TableScan: api projection=[request_path, content], partial_filters=[api.request_path = Utf8("/api/v1/users")]                                   |
| physical_plan | FilterExec: request_path@0 = /api/v1/users, projection=[content@1]                                                                                  |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                             |
|               |     HttpExec: base_url=https://api.example.com/, format=json, partitions=[(path="/api/v1/users", query="", body="", request_headers_present=false)] |
|               |                                                                                                                                                     |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+
