crates/data_components/tests/snapshots/integration__http_provider_test__http_provider_with_real_endpoint_explain.snap
---
source: crates/data_components/tests/http_provider_test.rs
description: HTTP provider - real endpoint with path filter
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                    |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: httpbin.request_path = Utf8("/json")                                                                                            |
|               |   TableScan: httpbin projection=[request_path, request_query, content], partial_filters=[httpbin.request_path = Utf8("/json")]          |
| physical_plan | FilterExec: request_path@0 = /json                                                                                                      |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                 |
|               |     HttpExec: base_url=https://httpbin.org/, format=json, partitions=[(path="/json", query="", body="", request_headers_present=false)] |
|               |                                                                                                                                         |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------+
