crates/data_components/tests/snapshots/integration__http_provider_test__tvmaze_combined_or_filter_explain.snap
---
source: crates/data_components/tests/http_provider_test.rs
description: HTTP provider - combined OR filter
---
+---------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type           | plan                                                                                                                                                                                                                                                                                                                               |
+---------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan        | Filter: tvmaze.request_path = Utf8("/shows/169") OR tvmaze.request_path = Utf8("/search/people") AND tvmaze.request_query = Utf8("q=michael")                                                                                                                                                                                      |
|                     |   TableScan: tvmaze projection=[request_path, request_query, content], partial_filters=[tvmaze.request_path = Utf8("/shows/169") OR tvmaze.request_path = Utf8("/search/people") AND tvmaze.request_query = Utf8("q=michael")]                                                                                                     |
| physical_plan_error | Error during planning: OR across different HTTP filter columns (request_path, request_query) is not supported because the connector would otherwise issue combined HTTP requests instead of separate ones. Use IN (...) to enumerate values on a single column, or run separate queries (e.g. UNION ALL) for alternative requests. |
+---------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
