crates/data_components/tests/snapshots/integration__http_provider_test__tvmaze_multi_object_explain.snap
---
source: crates/data_components/tests/http_provider_test.rs
description: HTTP provider - multiple JSON objects (array)
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                            |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: tvmaze.request_path = Utf8("/search/people") AND tvmaze.request_query = Utf8("q=michael")                                                                               |
|               |   TableScan: tvmaze projection=[request_path, request_query, content], partial_filters=[tvmaze.request_path = Utf8("/search/people"), tvmaze.request_query = Utf8("q=michael")] |
| physical_plan | FilterExec: request_path@0 = /search/people AND request_query@1 = q=michael                                                                                                     |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                         |
|               |     HttpExec: base_url=https://api.tvmaze.com/, format=json, partitions=[(path="/search/people", query="q=michael", body="", request_headers_present=false)]                    |
|               |                                                                                                                                                                                 |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
