crates/data_components/tests/snapshots/integration__http_provider_test__tvmaze_single_object_explain.snap
---
source: crates/data_components/tests/http_provider_test.rs
description: HTTP provider - single JSON object
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                            |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: tvmaze.request_path = Utf8("/shows/169")                                                                                                |
|               |   TableScan: tvmaze projection=[request_path, request_query, content], partial_filters=[tvmaze.request_path = Utf8("/shows/169")]               |
| physical_plan | FilterExec: request_path@0 = /shows/169                                                                                                         |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                         |
|               |     HttpExec: base_url=https://api.tvmaze.com/, format=json, partitions=[(path="/shows/169", query="", body="", request_headers_present=false)] |
|               |                                                                                                                                                 |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
